# sneakercopy

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: libsodium-build.sh  libsodium-env.sh  linux-build-libsodium.sh  linux-libsodium-path.sh
src/: builder.rs  crypt.rs  errors.rs  flate.rs  lib.rs  pack.rs  password.rs
src/tarbox/: attributes.rs  decoder.rs  encoder.rs  errors.rs  mod.rs  secret.rs
