[package]
name = "sneakercopy"
version = "0.1.0"
authors = ["Mailgun Developers <developers@mailgun.net>"]

[dependencies]
base64 = "0.9.2"
error-chain = "0.12.0"
libflate = "0.1.0"
log = "0.4.0"
quicli = "0.3.0"
rand = "0.5.5"
rpassword = "2.0.0"
sodiumoxide = "0.1.0"
spinners = "1.0.0"
structopt = "0.2.10"
tar = "0.4.16"

[dev-dependencies]
error-chain = "0.12.0"

[[bin]]
name = "sneakercopy"
